--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,28 @@
+# Ignore node_modules in both frontend and backend
+/backend/node_modules
+/frontend/node_modules
 node_modules
+
+
+# Ignore environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Dependencies
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Production
+/build
+
+# Miscellaneous
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
