--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.2"
+    "mongoose": "^8.7.2",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
